Cleaned up config.R and added commands to run versions.sh, render site, and mv files to report directory in analysis directory.

--- a/Cecret/bin/report/about.Rmd
+++ b/Cecret/bin/report/about.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "About Report"
 params: 
-  runPath: NULL
-  runID: NULL
+  analysisDirFP: null
 ---
 
 # For fast standalone testing:
@@ -15,7 +14,7 @@ library(kableExtra)
 ```
 
 ```{r version-import, include=FALSE}
-vTab <- readr::read_delim(file = paste(params$runPath, params$runID, "versions.txt", sep = "/"),
+vTab <- readr::read_delim(file = paste(params$analysisDirFP, "versions.txt", sep = "/"),
                           col_names = c("Cecret Output Directory", "Tool Version"),
                           delim = ":",
                           trim_ws = TRUE)
