--- a/Cecret/bin/report/ampliconCov.Rmd
+++ b/Cecret/bin/report/ampliconCov.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Amplicon Coverage"
 params:
-  runPath: ".."
-  runID: "M347-21-010"
+  analysisDirFP: null
+  runID: null
   pacbamDir: "pacbam"
+  pacbamFileSuffix: ".primertrim.sorted.pileup"
   ampBED: "ref_docs/nCoV-2019.insert.bed"
   ampMinCov: 30
   ampMeanCov: 100
@@ -11,8 +12,8 @@ params:
   ampMinNPass: 93
 ---
 
-```{r comments, include=FALSE}
-# Unlike most other params set in this report template, covFileDir and covFileSuffix are not controlled by options in the config.R script. It is assumed that the Cecret run directory structure is maintained and the report script will look for the directories and files named in params in one directory up from the run directory. To change these settings, modify params.
+```{r ampliconCov-comments, include=FALSE}
+# There's still a lot of clean up and optimization to be done on this file. Big loops need to be broken up, repeated blocks put into functions, etc. Note cache is turned on in block amp_cov; I don't think this will cause a problem when running multiple times in the same directory on different runs, but I don't know.
 ```
 
 
@@ -34,7 +35,7 @@ ampInfo <- select(ampInfo, -TRASH, -REF)
 ```
 ```{r amp_cov, include=FALSE, cache=TRUE}
 # Read in the names of all of the files; note cache=TRUE for this block because it takes a long time to read everything in.
-pbFiles <- list.files(path = paste(params$runPath, params$runID, params$pacbamDir, sep = "/"),
+pbFiles <- list.files(path = paste(params$analysisDirFP, params$pacbamDir, sep = "/"),
                       full.names = TRUE,
                       recursive = TRUE)
 
@@ -67,7 +68,7 @@ for (r in 1:nrow(ampInfo)) { # this gives row index for ampInfo, i.e. a single a
                 dplyr::filter(pos %in% seq(start, end)) %>%
                 dplyr::select(pos, cov) %>%
                 dplyr::mutate(SampleID = str_replace(pbFilesPU_odd[f], "^.*/odd/", "")) %>%
-                dplyr::mutate(SampleID = str_replace(SampleID, paste0("-", params$runID, ".primertrim.sorted.pileup"), "")) %>%
+                dplyr::mutate(SampleID = str_replace(SampleID, paste0("-", params$runID, params$pacbamFileSuffix), "")) %>%
                 dplyr::mutate(SampleGroup = stringr::str_replace(SampleID, "-A(1|2|3|4|5|6|7|8)$", "")) %>%
                 dplyr::mutate(Amplicon = ampID) %>%
                 dplyr::arrange(pos)
@@ -82,7 +83,7 @@ for (r in 1:nrow(ampInfo)) { # this gives row index for ampInfo, i.e. a single a
                   dplyr::filter(pos %in% seq(start, end)) %>%
                   dplyr::select(pos, cov) %>%
                   dplyr::mutate(SampleID = str_replace(pbFilesPU_even[f], "^.*/even/", "")) %>%
-                  dplyr::mutate(SampleID = str_replace(SampleID, paste0("-", params$runID, ".primertrim.sorted.pileup"), "")) %>%
+                  dplyr::mutate(SampleID = str_replace(SampleID, paste0("-", params$runID, params$pacbamFileSuffix), "")) %>%
                   dplyr::mutate(SampleGroup = stringr::str_replace(SampleID, "-A(1|2|3|4|5|6|7|8)$", "")) %>%
                   dplyr::mutate(Amplicon = ampID) %>%
                   dplyr::arrange(pos)
