--- a/Cecret/bin/report/about.Rmd
+++ b/Cecret/bin/report/about.Rmd
@@ -2,11 +2,19 @@
 title: "About Report"
 params: 
   analysisDirFP: null
+  v.vadr: "1.1.3"
+  v.pacbam: "1.6.0"
+  v.multiqc: "1.10.1"
 ---
 
-```{r about-comments, include=FALSE}
+```{r about-comments, include=FALSE, eval=FALSE}
 # For fast standalone testing:
-# rmarkdown::render(input = "about.Rmd", output_format = "html_document", params = list(runPath = "/Path/to/dir/containing/versions.txt", runID = "Dir/containing/versions.txt"))
+rmarkdown::render(input = "about.Rmd", 
+                  output_format = "html_document", 
+                  params = list(analysisDirFP = "Full/path/to/analysis/directory"))
+
+# Note that when Cecret component versions are obtained from versions.sh, there were difficulties calling other containers from within the R container. Therefore those version numbers are set with params at the top of this script.
+
 ```
 
 ```{r setup, include=FALSE}
@@ -20,6 +28,10 @@ vTab <- readr::read_delim(file = paste(params$analysisDirFP, "versions.txt", sep
                           col_names = c("Cecret Output Directory", "Tool Version"),
                           delim = ":",
                           trim_ws = TRUE)
+vTab <- bind_rows(vTab, c("Cecret Output Directory" = "vadr", "Tool Version" = params$v.vadr), 
+                        c("Cecret Output Directory" = "pacbam", "Tool Version" = params$v.pacbam), 
+                        c("Cecret Output Directory" = "multiqc", "Tool Version" = params$v.multiqc)
+                  )
 ```
 
 ***
