Correcting missing R lib dygraphs in container, correcting ampliconDetailTemplate.Rmd params, and rearranging knit list in config.R.

--- a/Cecret/bin/report/ref_docs/ampliconDetailTemplate.Rmd
+++ b/Cecret/bin/report/ref_docs/ampliconDetailTemplate.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Amplicon Coverage Detailed Report"
 params:
-    covTable: "notarealdefault"
-    sampleID: "notarealdefault"
-    passfailTab: "notarealdefault"
+    covTable: null
+    sampleID: null
+    passfailTab: null
 ---
 
 ```{r setup2, include=FALSE}
