--- a/Cecret/bin/report/runQC.Rmd
+++ b/Cecret/bin/report/runQC.Rmd
@@ -5,7 +5,7 @@ params:
   runID: null
   seqDirFP: null
   multiQC: "multiqc_report.html"
-  insertDir: "samtools_insert_sizes"
+  insertDir: "samtools_insertsizes"
   insertFileSuffix: "-insert_sizes.txt"
   expectedInsertSize: 200
   extremeInsertSize: 500
