--- a/Cecret/bin/report/ref_docs/ampliconDetailTemplate.Rmd
+++ b/Cecret/bin/report/ref_docs/ampliconDetailTemplate.Rmd
@@ -16,7 +16,7 @@ library(dygraphs)
 #### Sample ID: `r params$sampleID`
 
 ```{r ampPF, echo=FALSE, results='asis', eval=TRUE}
-# Parse data passed from sampleCov.Rmd on amplicon pass/fails
+# Parse data passed from ampliconCov.Rmd on amplicon pass/fails
 # Number amplicons passing QC
 nPass <- nrow(filter(params$passfailTab, Mean.Pass == "PASS" & Min.Pass == "PASS"))
 # Amplicon ID numbers for those that failed QC (mean cov <100, min cov <30)
