--- a/Cecret/bin/report/ampliconCov.Rmd
+++ b/Cecret/bin/report/ampliconCov.Rmd
@@ -34,7 +34,7 @@ ampInfo <- read_tsv(params$ampBED, col_names = FALSE)
 colnames(ampInfo) <- c("REF", "START", "END", "AMP_ID", "POOL", "TRASH")
 ampInfo <- select(ampInfo, -TRASH, -REF)
 ```
-```{r amp_cov, include=FALSE, cache=TRUE}
+```{r amp_cov, include=FALSE}
 # Read in the names of all of the files; note cache=TRUE for this block because it takes a long time to read everything in.
 pbFiles <- list.files(path = paste(params$analysisDirFP, params$pacbamDir, sep = "/"),
                       full.names = TRUE,
