Correcting elseif > ifelse typo in index.Rmd.

--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -49,8 +49,8 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
             fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1), 
             fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
             seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
-                                        color = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", elseif(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "black")), 
-                                        bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, elseif(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
+                                        color = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "black")), 
+                                        bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
             depth_after_trimming = cell_spec(depth_after_trimming, 
                                              color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"), 
                                              bold = ifelse(depth_after_trimming >= depthAfterTrimThreshold, F, T)),
