--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -4,7 +4,19 @@ params:
   analysisDirFP: null
   runID: null
   seqDirFP: null
+  sampleIDInsertFreq: 5
 ---
+```{r index-comments, include=FALSE}
+# CSS styling helps to manage the layout of the page to compensate for the table. From: https://itqna.net/questions/48098/how-adjust-margins-r-markdown.
+```
+<style type="text/css">
+.main-container {
+  max-width: 60%;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+</style>
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -12,6 +24,7 @@ library(tidyverse)
 library(formattable)
 library(kableExtra)
 ```
+
 ```{r thresholds, include=FALSE}
 fastqcRawThreshold <- 100000          # min number of raw reads accepted in fastqc_raw column
 seqycleanKeptReviewThreshold <- 90    # min percent of reads remaining after seqyclean (pass/review)
@@ -38,7 +51,7 @@ sumTab <- read_tsv(paste0(params$analysisDirFP, "/summary.txt"))
 # This does all of the formatting for the table read in above and displayed in the next code chunk. It contains a mix of dplyr, formattable, and kableExtra commands.
 sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID), "")) %>% 
           # remember to mod column names to match if columns included change
-          select(-aligner_version, -ivar_version, -fastp_reads_passed) %>%
+          select(-sample_id, -aligner_version, -ivar_version, -fastp_reads_passed) %>%
           mutate(
             pangolin_lineage = cell_spec(pangolin_lineage, 
                                          color = ifelse(pangolin_lineage == "None", "red", "black"), 
@@ -49,7 +62,7 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
             fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1), 
             fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
             seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
-                                        color = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "black")), 
+                                        background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")), 
                                         bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
             depth_after_trimming = cell_spec(depth_after_trimming, 
                                              color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"), 
@@ -71,12 +84,41 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
                                      bold = ifelse(vadr_status == "PASS", F, T)))
 
 # Make column names nicer
-colnames(sumTab) <- c("GroupID", "SampleID", "Pangolin", "Pangolin.QC", "NextClade", "#FastQC.R1", "#FastQC.R2", "#Seqyclean.Pairs", "%Seqyclean.Pairs", "Depth.Post.Trim", "Coverage.Post.Trim", "%Human.Reads", "%SC2.Reads", "#iVar.Variants", "#BCFTools.Variants", "#BEDTools.Failed.Amps", "#SAMTools.Failed.Amps", "#N", "#Degenerage", "#ACTG", "#Total.Bases", "Total.Reads.Analyzed", "%N", "Mean.Cov.Depth", "%Reads.Mapping.SC2", "Vadr", "Length.Longest.Insert", "Length.Longest.Del")
+colnames(sumTab) <- c("SampleID", "Pangolin", "Pangolin.QC", "NextClade", "#FastQC.R1", "#FastQC.R2", "#Seqyclean.Pairs", "%Seqyclean.Pairs", "Depth.Post.Trim", "Coverage.Post.Trim", "%Human.Reads", "%SC2.Reads", "#iVar.Variants", "#BCFTools.Variants", "#BEDTools.Failed.Amps", "#SAMTools.Failed.Amps", "#N", "#Degenerage", "#ACTG", "#Total.Bases", "Total.Reads.Analyzed", "%N", "Mean.Cov.Depth", "%Reads.Mapping.SC2", "Vadr", "Length.Longest.Insert", "Length.Longest.Del")
+
+# Insert SampleID column into table at every nth column (params$sampleIDInsertFreq) position
+# how many times to insert sampleID column
+colReps <- floor(ncol(sumTab) / params$sampleIDInsertFreq) 
+# create and bind columns to insert
+sumTab <- bind_cols(sumTab, as_tibble(replicate(colReps,sumTab$SampleID))) 
+sumTabColNames <- colnames(sumTab)
+# function to rename columns slightly more nicely. Note R won't allow redundant column names.
+colNamer <- function(c) {
+  return(paste0("SampleID", str_replace(c, "V", "")))
+}
+# colGrayBG <- function(c) {
+#   return(cell_spec(c, background = "lightgray"))
+# }
+# move new sampleID columns to right place
+for (i in 1:colReps) {
+  sumTab <- relocate(sumTab, 
+                     eval(paste0("V", i)), 
+                     .after = sumTabColNames[i*params$sampleIDInsertFreq]) %>%
+            rename_with(colNamer, starts_with(paste0("V", i)))
+}
+# format SampleID columns with gray background
+#sumTab <- mutate_at(sumTab, vars(contains("SampleID")), colGrayBG)
           
 ```
 
 ```{r display-sum, echo=FALSE}
-kbl(sumTab, escape = F, align = "l") %>% 
-  kable_material(c("striped", "hover")) 
+# Note at time of dev, adding scroll boxes was the only way AJW could get fixed_thead = TRUE to work as expected.
+sampleIDIndices <- which(str_starts(colnames(sumTab), "SampleID"))
+
+knitr::kable(sumTab, escape = F, align = "l") %>% 
+  column_spec(sampleIDIndices, background = "lightgray") %>%
+  kable_styling(fixed_thead = TRUE, bootstrap_options = c("striped", "hover")) %>%
+  scroll_box(width = "150%", height = "600px")
+  
 ```
 
