--- a/Cecret/bin/report/ampliconCov.Rmd
+++ b/Cecret/bin/report/ampliconCov.Rmd
@@ -24,6 +24,8 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(formattable)
 library(DT)
+# stop summarise messages https://rstats-tips.net/2020/07/31/get-rid-of-info-of-dplyr-when-grouping-summarise-regrouping-output-by-species-override-with-groups-argument/
+options(dplyr.summarise.inform = FALSE)
 ```
 
 #### Per Amplicon Coverage Summary
