--- a/Cecret/bin/report/index.Rmd
+++ b/Cecret/bin/report/index.Rmd
@@ -6,6 +6,7 @@ params:
   seqDirFP: null
   sampleIDInsertFreq: 5
 ---
+
 ```{r index-comments, include=FALSE, eval=FALSE}
 # CSS styling helps to manage the layout of the page to compensate for the table. From: https://itqna.net/questions/48098/how-adjust-margins-r-markdown.
 
@@ -49,7 +50,7 @@ highGood <- function(v, t) {
 
 ```{r read-sum, include=FALSE}
 # Read summary.txt in
-sumTab <- read_tsv(paste0(params$analysisDirFP, "/summary.txt"))
+sumTab <- read_tsv(file.path(params$analysisDirFP, "summary.txt"))
 
 # This does all of the formatting for the table read in above and displayed in the next code chunk. It contains a mix of dplyr, formattable, and kableExtra commands.
 sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID), "")) %>% 
@@ -87,17 +88,51 @@ sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID),
                                      bold = ifelse(vadr_status == "PASS", F, T)))
 
 # Make column names nicer
-colnames(sumTab) <- c("Sample.ID", "Sample.Name", "Pangolin", "Pangolin.QC", "NextClade", "#FastQC.R1", "#FastQC.R2", "#Seqyclean.Pairs", "%Seqyclean.Pairs", "Depth.Post.Trim", "Coverage.Post.Trim", "%Human.Reads", "%SC2.Reads", "#iVar.Variants", "#BCFTools.Variants", "#BEDTools.Failed.Amps", "#SAMTools.Failed.Amps", "#N", "#Degenerage", "#ACTG", "#Total.Bases", "Total.Reads.Analyzed", "%N", "Mean.Cov.Depth", "%Reads.Mapping.SC2", "Vadr", "Length.Longest.Insert", "Length.Longest.Del")
+colnames(sumTab) <- c("Sample.ID", 
+                      "Sample.Name", 
+                      "Pangolin", 
+                      "Pangolin.QC", 
+                      "NextClade", 
+                      "#FastQC.R1", 
+                      "#FastQC.R2", 
+                      "#Seqyclean.Pairs", 
+                      "%Seqyclean.Pairs", 
+                      "Depth.Post.Trim", 
+                      "Coverage.Post.Trim", 
+                      "%Human.Reads", 
+                      "%SC2.Reads", 
+                      "#iVar.Variants", 
+                      "#BCFTools.Variants", 
+                      "#BEDTools.Failed.Amps", 
+                      "#SAMTools.Failed.Amps", 
+                      "#N", 
+                      "#Degenerate", 
+                      "#ACTG", 
+                      "#Total.Bases", 
+                      "Total.Reads.Analyzed", 
+                      "%N", 
+                      "Mean.Cov.Depth", 
+                      "%Reads.Mapping.SC2", 
+                      "Vadr", 
+                      "Vadr.All.ORF.Shift",
+                      "Vadr.S.ORF.Shift", 
+                      "Length.Longest.Insert", 
+                      "Length.Longest.Del",
+                      "ORFs.Passing.QC",
+                      "Coverage.S",
+                      "Mean.Depth.S",
+                      "Percent.Pos.Min.Cov.S",
+                      "Percent.Ns.S")
 
 # Insert SampleID column into table at every nth column (params$sampleIDInsertFreq) position
 # how many times to insert sampleID column
 colReps <- floor(ncol(sumTab) / params$sampleIDInsertFreq) 
 # create and bind columns to insert
-sumTab <- bind_cols(sumTab, as_tibble(replicate(colReps, sumTab$Sample.ID))) 
+sumTab <- bind_cols(sumTab, as_tibble(replicate(colReps, sumTab$Sample.Name))) 
 sumTabColNames <- colnames(sumTab)
 # function to rename columns slightly more nicely. Note R won't allow redundant column names.
 colNamer <- function(c) {
-  return(paste0("Sample.ID", str_replace(c, "V", "")))
+  return(paste0("Sample.Name", str_replace(c, "V", "")))
 }
 # move new sampleID columns to right place
 for (i in 1:colReps) {
@@ -110,7 +145,7 @@ for (i in 1:colReps) {
 
 ```{r display-sum, echo=FALSE}
 # Note at time of dev, adding scroll boxes was the only way AJW could get fixed_thead = TRUE to work as expected.
-sampleIDIndices <- which(str_starts(colnames(sumTab), "Sample.ID"))
+sampleIDIndices <- which(str_starts(colnames(sumTab), "Sample.Name"))
 
 knitr::kable(sumTab, escape = F, align = "l") %>% 
   column_spec(sampleIDIndices, background = "lightgray") %>%
