--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -96,26 +96,26 @@ colnames(sumTab) <- c("Sample.ID",
                       "Pangolin", 
                       "Pangolin.QC", 
                       "NextClade", 
-                      "#FastQC.R1", 
-                      "#FastQC.R2", 
-                      "#Seqyclean.Pairs", 
-                      "%Seqyclean.Pairs", 
+                      "Num.FastQC.R1", 
+                      "Num.FastQC.R2", 
+                      "Num.Seqyclean.Pairs", 
+                      "Percent.Seqyclean.Pairs", 
                       "Depth.Post.Trim", 
                       "Coverage.Post.Trim", 
-                      "%Human.Reads", 
-                      "%SC2.Reads", 
-                      "#iVar.Variants", 
-                      "#BCFTools.Variants", 
-                      "#BEDTools.Failed.Amps", 
-                      "#SAMTools.Failed.Amps", 
-                      "#N", 
-                      "#Degenerate", 
-                      "#ACTG", 
-                      "#Total.Bases", 
+                      "Percent.Human.Reads", 
+                      "Percent.SC2.Reads", 
+                      "Num.iVar.Variants", 
+                      "Num.BCFTools.Variants", 
+                      "Num.BEDTools.Failed.Amps", 
+                      "Num.SAMTools.Failed.Amps", 
+                      "Num.N", 
+                      "Num.Degenerate", 
+                      "Num.ACTG", 
+                      "Num.Total.Bases", 
                       "Total.Reads.Analyzed", 
-                      "%N", 
+                      "Percent.N", 
                       "Mean.Cov.Depth", 
-                      "%Reads.Mapping.SC2", 
+                      "Percent.Reads.Mapping.SC2", 
                       "Vadr", 
                       "Vadr.All.ORF.Shift",
                       "Vadr.S.ORF.Shift", 
