--- a/Cecret/bin/report/clia_header.Rmd
+++ b/Cecret/bin/report/clia_header.Rmd
@@ -6,6 +6,7 @@ output: html_fragment
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+<!--html_preserve-->
 <!-- Document header table from Grant Williams-->
 <div class="header" id="header" style="position:fixed">
     <table border=1>
@@ -14,3 +15,4 @@ knitr::opts_chunk$set(echo = TRUE)
         <tr><td colspan=2><b>Doc. No. </b>EDLB.TE.B.004</td><td><b>Ver. No. </b>03</td><td><b>Effective Date: </b>04/18/2019</td></tr>
     </table>
 </div>
+<!--/html_preserve-->
