--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "Summary"
+title: null
+papersize: a4
 params:
   analysisDirFP: null
   runID: null
@@ -22,6 +23,7 @@ library(formattable)
 library(kableExtra)
 ```
 
+<!--html_preserve-->
 <!-- Document header table from Grant Williams-->
 <div class="header" id="header" style="position:fixed">
     <table border=1>
@@ -30,7 +32,7 @@ library(kableExtra)
         <tr><td colspan=2><b>Doc. No. </b>EDLB.TE.B.004</td><td><b>Ver. No. </b>03</td><td><b>Effective Date: </b>04/18/2019</td></tr>
     </table>
 </div>
-
+<!--/html_preserve-->
 
 ```{r thresholds, include=FALSE}
 fastqcRawThreshold <- 100000          # min number of raw reads accepted in fastqc_raw column
