WIP removing fancy formatting as part of latex troubleshooting.

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -56,37 +56,37 @@ sumTab <- read_tsv(file.path(params$analysisDirFP, "summary.txt"))
 # This does all of the formatting for the table read in above and displayed in the next code chunk. It contains a mix of dplyr, formattable, and kableExtra commands.
 sumTab <- mutate(sumTab, sample = str_replace(sample, paste0("-", params$runID), "")) %>% 
           # remember to mod column names to match if columns included change
-          select(-aligner_version, -ivar_version, -fastp_reads_passed) %>%
-          mutate(
-            pangolin_lineage = cell_spec(pangolin_lineage, 
-                                         color = ifelse(pangolin_lineage == "None", "red", "black"), 
-                                         bold = ifelse(pangolin_lineage == "None", T, F)),
-            pangolin_status = cell_spec(pangolin_status, 
-                                        color = ifelse(pangolin_status == "passed_qc", "black", "red"), 
-                                        bold = ifelse(pangolin_status == "passed_qc", F, T)),
-            fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1), 
-            fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
-            seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
-                                        background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")), 
-                                        bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
-            depth_after_trimming = cell_spec(depth_after_trimming, 
-                                             color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"), 
-                                             bold = ifelse(depth_after_trimming >= depthAfterTrimThreshold, F, T)),
-            coverage_after_trimming = cell_spec(coverage_after_trimming, 
-                                                color = ifelse(coverage_after_trimming >= covAfterTrimThreshold, "black", "red"), 
-                                                bold = ifelse(coverage_after_trimming >= covAfterTrimThreshold, F, T)),
-            # `%_human_reads` = cell_spec(`%_human_reads`, 
-            #                                     color = ifelse(`%_human_reads` < perHumanThreshold, "black", "red"), 
-            #                                     bold = ifelse(`%_human_reads` < perHumanThreshold, F, T)),
-            `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`, 
-                                                color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"), 
-                                                bold = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, F, T)),
-            `%_N` = cell_spec(`%_N`, 
-                              color = ifelse(`%_N` >= perNThreshold, "red", "black"), 
-                              bold = ifelse(`%_N` >= perNThreshold, T, F)),
-            vadr_status = cell_spec(vadr_status, 
-                                     color = ifelse(vadr_status == "PASS", "black", "red"), 
-                                     bold = ifelse(vadr_status == "PASS", F, T)))
+          select(-aligner_version, -ivar_version, -fastp_reads_passed)# %>%
+          # mutate(
+          #   pangolin_lineage = cell_spec(pangolin_lineage, 
+          #                                color = ifelse(pangolin_lineage == "None", "red", "black"), 
+          #                                bold = ifelse(pangolin_lineage == "None", T, F)),
+          #   pangolin_status = cell_spec(pangolin_status, 
+          #                               color = ifelse(pangolin_status == "passed_qc", "black", "red"), 
+          #                               bold = ifelse(pangolin_status == "passed_qc", F, T)),
+          #   fastqc_raw_reads_1 = color_bar(color = highGood(fastqc_raw_reads_1, fastqcRawThreshold))(fastqc_raw_reads_1), 
+          #   fastqc_raw_reads_2 = color_bar(color = highGood(fastqc_raw_reads_2, fastqcRawThreshold))(fastqc_raw_reads_2),
+          #   seqyclean_percent_kept_after_cleaning = cell_spec(seqyclean_percent_kept_after_cleaning, 
+          #                               background = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, "red", ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, "yellow", "white")), 
+          #                               bold = ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptFailThreshold, T, ifelse(seqyclean_percent_kept_after_cleaning < seqycleanKeptReviewThreshold, T, F))),
+          #   depth_after_trimming = cell_spec(depth_after_trimming, 
+          #                                    color = ifelse(depth_after_trimming >= depthAfterTrimThreshold, "black", "red"), 
+          #                                    bold = ifelse(depth_after_trimming >= depthAfterTrimThreshold, F, T)),
+          #   coverage_after_trimming = cell_spec(coverage_after_trimming, 
+          #                                       color = ifelse(coverage_after_trimming >= covAfterTrimThreshold, "black", "red"), 
+          #                                       bold = ifelse(coverage_after_trimming >= covAfterTrimThreshold, F, T)),
+          #   # `%_human_reads` = cell_spec(`%_human_reads`, 
+          #   #                                     color = ifelse(`%_human_reads` < perHumanThreshold, "black", "red"), 
+          #   #                                     bold = ifelse(`%_human_reads` < perHumanThreshold, F, T)),
+          #   `%_SARS-COV-2_reads` = cell_spec(`%_SARS-COV-2_reads`, 
+          #                                       color = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, "black", "red"), 
+          #                                       bold = ifelse(`%_SARS-COV-2_reads` >= perSC2Threshold, F, T)),
+          #   `%_N` = cell_spec(`%_N`, 
+          #                     color = ifelse(`%_N` >= perNThreshold, "red", "black"), 
+          #                     bold = ifelse(`%_N` >= perNThreshold, T, F)),
+          #   vadr_status = cell_spec(vadr_status, 
+          #                            color = ifelse(vadr_status == "PASS", "black", "red"), 
+          #                            bold = ifelse(vadr_status == "PASS", F, T)))
 
 # Make column names nicer
 colnames(sumTab) <- c("Sample.ID", 
