WIP once more, with feeling and tex this time, fix the CLIA header.

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -1,13 +1,14 @@
 ---
 title: null
-papersize: a4
-orientation: landscape
+classoption: landscape,a0
 params:
   analysisDirFP: null
   runID: null
   seqDirFP: null
   sampleIDInsertFreq: 5
 output: pdf_document
+  includes:
+    in_header: "clia_header.tex"
 ---
 
 ```{r index-comments, include=FALSE, eval=FALSE}
