WIP load rmarkdown library.

--- a/Cecret/bin/report/clia_summary.Rmd
+++ b/Cecret/bin/report/clia_summary.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(formattable)
 library(kableExtra)
+library(rmarkdown)
 pdf_document(includes = includes(in_header = "clia_header.tex"))
 ```
 
